--- a/code/pom.xml
+++ b/code/pom.xml
@@ -36,6 +36,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
+            <version>1.6.0</version>
             <executions>
               <execution>
                 <id>lein-test</id>
