--- a/container/pom.xml
+++ b/container/pom.xml
@@ -46,8 +46,7 @@
         <version>3.0.0</version>
         <executions>
           <execution>
-            <!-- sets the only.when.is.snapshot.used property to true
-                 if SNAPSHOT was used, to the project version otherwise -->
+            <!-- sets to 'test' on snapshot, version otherwise -->
             <id>set docker tag property</id>
             <goals>
               <goal>regex-property</goal>
