--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -4,13 +4,15 @@ ARG GIT_BRANCH
 ARG GIT_COMMIT_ID
 ARG GIT_DIRTY
 ARG GIT_BUILD_TIME
-ARG GIT_BUILD_NUMBER_UNIQUE
+ARG TRAVIS_BUILD_NUMBER
+ARG TRAVIS_BUILD_WEB_URL
 
 LABEL git.branch=${GIT_BRANCH}
 LABEL git.commit.id=${GIT_COMMIT_ID}
 LABEL git.dirty=${GIT_DIRTY}
 LABEL git.build.time=${GIT_BUILD_TIME}
-LABEL git.build.number.unique=${GIT_BUILD_NUMBER_UNIQUE}
+LABEL travis.build.number=${TRAVIS_BUILD_NUMBER}
+LABEL travis.build.web.url=${TRAVIS_BUILD_WEB_URL}
 
 ADD target/dependency/lib /opt/nuvla/server/lib
 ADD src/scripts/start.sh /opt/nuvla/server/bin/start.sh
