create development containers (#2)
* name development containers after branch

* deploy from all branches

* select branch name from environment when necessary

* update labels

* update plugin version

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,5 +1,19 @@
 FROM openjdk:8-jre-slim
 
+ARG GIT_BRANCH
+ARG GIT_COMMIT_ID
+ARG GIT_DIRTY
+ARG GIT_BUILD_TIME
+ARG TRAVIS_BUILD_NUMBER
+ARG TRAVIS_BUILD_WEB_URL
+
+LABEL git.branch=${GIT_BRANCH}
+LABEL git.commit.id=${GIT_COMMIT_ID}
+LABEL git.dirty=${GIT_DIRTY}
+LABEL git.build.time=${GIT_BUILD_TIME}
+LABEL travis.build.number=${TRAVIS_BUILD_NUMBER}
+LABEL travis.build.web.url=${TRAVIS_BUILD_WEB_URL}
+
 ADD target/dependency/lib /opt/nuvla/server/lib
 ADD src/scripts/start.sh /opt/nuvla/server/bin/start.sh
 ADD src/scripts/log4j.properties /opt/nuvla/server/resources/log4j.properties
