https for clojars; bump up dockerfile-plugin version; docu on building on M1 chip

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <pluginRepository>
       <id>clojars.org</id>
       <name>Clojars Repository</name>
-      <url>http://clojars.org/repo</url>
+      <url>https://clojars.org/repo</url>
     </pluginRepository>
   </pluginRepositories>
   
