--- a/code/pom.xml
+++ b/code/pom.xml
@@ -22,6 +22,13 @@
     </license>
   </licenses>
 
+  <dependencies>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+  </dependencies>
   <profiles>
 
     <profile>
