--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,17 @@ jobs:
           distribution: 'zulu'
           java-version: '11'
 
+      - name: Setup Sonar Scanner
+        uses: warchant/setup-sonar-scanner@v3
+        version: 4.6.2.2472
+      - name: Run Sonar Scanner
+        env:
+          # to get access to secrets.SONAR_TOKEN_TEST, provide GITHUB_TOKEN
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        working-directory: code
+        run: sonar-scanner
+               -Dsonar.login=${{ secrets.SONAR_TOKEN_TEST }}
+
       - uses: s4u/maven-settings-action@v2.2.0
         with:
           githubServer: false
