use latest sonar scanner with GHA

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Setup Sonar Scanner
         uses: warchant/setup-sonar-scanner@v3
+        with:
+          version: 4.6.2.2472
       - name: Run Sonar Scanner
         env:
           # to get access to secrets.SONAR_TOKEN_TEST, provide GITHUB_TOKEN
