--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,31 +27,27 @@ jobs:
           distribution: 'zulu'
           java-version: '11'
 
-      - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@v1.0.0
+      - name: Setup Sonar Scanner
+        uses: warchant/setup-sonar-scanner@v3
         with:
-          projectBaseDir: code
+          version: 4.6.2.2472
+
+      - name: Run Sonar Scanner
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_TEST }}
+          # to get access to secrets.SONAR_TOKEN_TEST, provide GITHUB_TOKEN
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        working-directory: code
+        run: sonar-scanner
+               -Dsonar.login=${{ secrets.SONAR_TOKEN_TEST }}
 
       - name: SonarQube Quality Gate check
         uses: sonarsource/sonarqube-quality-gate-action@v1.0.0
         # Force to fail step after specific time
         timeout-minutes: 5
+        with:
+          scanMetadataReportFile: code/.scannerwork/report-task.txt
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_TEST }}
-
-#      - name: Setup Sonar Scanner
-#        uses: warchant/setup-sonar-scanner@v3
-#        with:
-#          version: 4.6.2.2472
-#      - name: Run Sonar Scanner
-#        env:
-#          # to get access to secrets.SONAR_TOKEN_TEST, provide GITHUB_TOKEN
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        working-directory: code
-#        run: sonar-scanner
-#               -Dsonar.login=${{ secrets.SONAR_TOKEN_TEST }}
 
       - uses: s4u/maven-settings-action@v2.2.0
         with:
