--- a/code/sonar-project.properties
+++ b/code/sonar-project.properties
@@ -2,14 +2,14 @@ sonar.organization=nuvla
 sonar.projectKey=nuvla-ring
 sonar.projectName=nuvla-ring
 sonar.projectVersion=0.1
-sonar.sources=src,project.clj
+sonar.sources=src,test,project.clj
 sonar.host.url=https://sonarqube.ci-dev.nuv.la
 sonar.clojure.eastwood.enabled=true
 sonar.clojure.kibit.enabled=true
 sonar.clojure.kondo.enabled=true
 sonar.clojure.ancient.enabled=true
-sonar.clojure.lein-nvd.enabled=true
-sonar.clojure.lein-nvd.json-output-location=target/nvd/dependency-check-report.json
+sonar.clojure.nvd.enabled=true
+sonar.clojure.nvd.json-output-location=target/nvd/dependency-check-report.json
 sonar.clojure.cloverage.enabled=true
-sonar.clojure.cloverage.xml-output-location=target/coverage/junit.xml
+sonar.clojure.cloverage.json-output-location=target/coverage/codecov.json
 
