--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,12 @@ jobs:
 
       - name: Run Sonar Scanner
         env:
-          # provide GITHUB_TOKEN to get access to secrets.SONAR_TOKEN_TEST
+          # provide GITHUB_TOKEN to get access to secrets.SONAR_TOKEN
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         working-directory: code
         run: sonar-scanner
-               -Dsonar.login=${{ secrets.SONAR_TOKEN_TEST }}
+               -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+               -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
 
       - name: SonarQube Quality Gate check
         uses: sonarsource/sonarqube-quality-gate-action@v1.0.0
@@ -47,7 +48,8 @@ jobs:
         with:
           scanMetadataReportFile: code/.scannerwork/report-task.txt
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_TEST }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
       - uses: s4u/maven-settings-action@v2.2.0
         with:
@@ -76,14 +78,14 @@ jobs:
           SIXSQ_DOCKER_PASSWORD: ${{ secrets.SIXSQ_DOCKER_PASSWORD }}
         run: mvn deploy
 
-#  job-notify:
-#    if: always()
-#    name: Post Workflow Status To Slack
-#    needs:
-#      - job-build
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: Gamesight/slack-workflow-status@master
-#        with:
-#          repo_token: ${{secrets.GITHUB_TOKEN}}
-#          slack_webhook_url: ${{secrets.SLACK_WEBHOOK_URL}}
+  job-notify:
+    if: always()
+    name: Post Workflow Status To Slack
+    needs:
+      - job-build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: Gamesight/slack-workflow-status@master
+        with:
+          repo_token: ${{secrets.GITHUB_TOKEN}}
+          slack_webhook_url: ${{secrets.SLACK_WEBHOOK_URL}}
