--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,9 +74,9 @@ jobs:
 
       - name: Build with Maven
         env:
-          TRAVIS_BRANCH: ${{ steps.extract_branch.outputs.branch }}
-          TRAVIS_PULL_REQUEST_BRANCH: ${{ github.head_ref }}
-          TRAVIS_BUILD_NUMBER: ${{ github.run_id }}
+          CI_BRANCH: ${{ steps.extract_branch.outputs.branch }}
+          CI_PULL_REQUEST_BRANCH: ${{ github.head_ref }}
+          CI_BUILD_NUMBER: ${{ github.run_id }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           SIXSQ_DOCKER_USERNAME: ${{ secrets.SIXSQ_DOCKER_USERNAME }}
