--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -4,15 +4,15 @@ ARG GIT_BRANCH
 ARG GIT_COMMIT_ID
 ARG GIT_DIRTY
 ARG GIT_BUILD_TIME
-ARG TRAVIS_BUILD_NUMBER
-ARG TRAVIS_BUILD_WEB_URL
+ARG CI_BUILD_NUMBER
+ARG CI_BUILD_WEB_URL
 
 LABEL git.branch=${GIT_BRANCH}
 LABEL git.commit.id=${GIT_COMMIT_ID}
 LABEL git.dirty=${GIT_DIRTY}
 LABEL git.build.time=${GIT_BUILD_TIME}
-LABEL travis.build.number=${TRAVIS_BUILD_NUMBER}
-LABEL travis.build.web.url=${TRAVIS_BUILD_WEB_URL}
+LABEL ci.build.number=${CI_BUILD_NUMBER}
+LABEL ci.build.web.url=${CI_BUILD_WEB_URL}
 
 ADD target/dependency/lib /opt/nuvla/server/lib
 ADD src/scripts/start.sh /opt/nuvla/server/bin/start.sh
