--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,11 +83,16 @@ jobs:
           SIXSQ_DOCKER_PASSWORD: ${{ secrets.SIXSQ_DOCKER_PASSWORD }}
         run: mvn deploy
 
+      - name: See test results
+        run: |
+          ls -l code/target/test-reports/TEST-*.xml
+          cat code/target/test-reports/TEST-*.xml
+
       - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action/composite@v1
+        uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
         with:
-          files: code/junit.xml
+          files: code/target/test-reports/TEST-*.xml
 
   job-notify:
     if: always()
