back to lein test

--- a/code/pom.xml
+++ b/code/pom.xml
@@ -47,7 +47,7 @@
                 <configuration>
                   <executable>lein</executable>
                   <arguments>
-                    <argument>junit</argument>
+                    <argument>test</argument>
                   </arguments>
                 </configuration>
               </execution>
