ci config: move test dir from sources to tests

--- a/code/sonar-project.properties
+++ b/code/sonar-project.properties
@@ -1,7 +1,8 @@
 sonar.organization=nuvla
 sonar.projectKey=nuvla-ring
 sonar.projectName=nuvla-ring
-sonar.sources=src,test,project.clj
+sonar.sources=src,project.clj
+sonar.tests=test
 sonar.clojure.eastwood.enabled=true
 sonar.clojure.kibit.enabled=true
 sonar.clojure.kondo.enabled=true
