--- a/code/sonar-project.properties
+++ b/code/sonar-project.properties
@@ -12,3 +12,4 @@ sonar.clojure.nvd.json-output-location=target/nvd/dependency-check-report.json
 sonar.clojure.cloverage.enabled=true
 sonar.clojure.cloverage.json-output-location=target/coverage/codecov.json
 
+sonar.testExecutionReportPaths=test-reports/sonar/testExecutions.xml
