--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,8 @@ jobs:
       - name: Fail on failed tests
         if: always()
         run: |
-          sudo apt-get install -y libxml2-utils
+          sudo apt-get update
+          sudo apt-get install -y libxml2-utils --fix-missing
           echo "Found ${{ steps.tests.outputs.path_count }} test report(s)"
           if [[ ${{ steps.tests.outputs.path_count }} < 1 ]]; then
              echo "ERROR: No unit test reports collected."
