--- a/code/sonar-project.properties
+++ b/code/sonar-project.properties
@@ -2,7 +2,6 @@ sonar.organization=nuvla
 sonar.projectKey=nuvla-ring
 sonar.projectName=nuvla-ring
 sonar.sources=src,project.clj
-sonar.tests=test
 sonar.clojure.eastwood.enabled=true
 sonar.clojure.kibit.enabled=true
 sonar.clojure.kondo.enabled=true
@@ -12,4 +11,6 @@ sonar.clojure.nvd.json-output-location=target/nvd/dependency-check-report.json
 sonar.clojure.cloverage.enabled=true
 sonar.clojure.cloverage.json-output-location=target/coverage/codecov.json
 
+sonar.tests=test
+sonar.test.inclusions=**/*.clj,**/*.cljc
 sonar.testExecutionReportPaths=test-reports/sonar/testExecutions.xml
