ci: report version to SQ and debug

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,13 @@ jobs:
           distribution: 'zulu'
           java-version: '11'
 
+      - name: Project version
+        working-directory: code
+        run: |
+          VERSION=$( mvn help:evaluate -Dexpression=project.version -q -DforceStdout )
+          echo "::set-output name=version::$VERSION"
+        id: project_version
+
       - name: Setup Sonar Scanner
         uses: warchant/setup-sonar-scanner@v3
         with:
@@ -45,6 +52,16 @@ jobs:
         run: sonar-scanner
                -Dsonar.login=${{ secrets.SONAR_TOKEN }}
                -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+               -Dsonar.projectVersion=${{ steps.project_version.outputs.version }}
+               -X
+
+      - name: debug
+        run: |
+          echo ---------
+          cat code/.scannerwork/report-task.txt || true
+          echo ---------
+          cat code/test-reports/sonar/testExecutions.xml || true
+          echo ---------
 
       - name: Get list of tests
         if: always()
