--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
   job-build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           # Disabling shallow clone is recommended for improving relevancy of reporting for sonar
           fetch-depth: 0
@@ -26,11 +26,11 @@ jobs:
             ${{ runner.os }}-maven-
             - name: Cache local Maven repository
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: '11'
+          java-version: '21'
 
       - name: Project version
         working-directory: code
@@ -46,11 +46,11 @@ jobs:
 
       - name: Run Sonar Scanner
         env:
-          # provide GITHUB_TOKEN to get access to secrets.SONAR_TOKEN
+          # provide GITHUB_TOKEN to get access to secrets.SONARQUBE_TOKEN
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         working-directory: code
         run: sonar-scanner
-               -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+               -Dsonar.login=${{ secrets.SONARQUBE_TOKEN }}
                -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
                -Dsonar.projectVersion=${{ steps.project_version.outputs.version }}
                -X
@@ -92,7 +92,7 @@ jobs:
         with:
           scanMetadataReportFile: code/.scannerwork/report-task.txt
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
       - uses: s4u/maven-settings-action@v2.2.0
