JDK upgrade, deps update, non-root user (#12)
* Dockerfile - Switch to docker base image eclipse-temurin:21-alpine 

* Dockerfile - run service with a non-root user

* Upgrade parent

* CI - jdk21

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11-jre-slim
+FROM eclipse-temurin:21-alpine
 
 ARG GIT_BRANCH
 ARG GIT_COMMIT_ID
@@ -18,14 +18,11 @@ ADD target/dependency/lib /opt/nuvla/server/lib
 ADD src/scripts/start.sh /opt/nuvla/server/bin/start.sh
 ADD src/scripts/log4j.properties /opt/nuvla/server/resources/log4j.properties
 
-RUN /usr/sbin/groupadd -r nuvla
-RUN /usr/sbin/useradd -r -d /opt/nuvla/server -g nuvla nuvla
 RUN mkdir -p /opt/nuvla/server/lib.d/example
 RUN chmod 0755 /opt/nuvla/server/bin/start.sh
-RUN apt-get update && \
-    apt-get install -y curl && \
-    apt autoremove -y && \
-    rm -rf /var/lib/apt/lists/*
+
+RUN addgroup -S nuvla && adduser -S nuvla -G nuvla
+USER nuvla
 
 ENV NUVLA_SERVER_INIT=sixsq.nuvla.server.example/init
 
