--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -14,12 +14,11 @@ LABEL git.build.time=${GIT_BUILD_TIME}
 LABEL ci.build.number=${CI_BUILD_NUMBER}
 LABEL ci.build.web.url=${CI_BUILD_WEB_URL}
 
-ADD target/dependency/lib /opt/nuvla/server/lib
-ADD src/scripts/start.sh /opt/nuvla/server/bin/start.sh
-ADD src/scripts/log4j.properties /opt/nuvla/server/resources/log4j.properties
+COPY target/dependency/lib /opt/nuvla/server/lib
+COPY --chmod=755 src/scripts/start.sh /opt/nuvla/server/bin/
+COPY src/scripts/log4j.properties /opt/nuvla/server/resources/
 
 RUN mkdir -p /opt/nuvla/server/lib.d/example
-RUN chmod 0755 /opt/nuvla/server/bin/start.sh
 
 RUN addgroup -S nuvla && adduser -S nuvla -G nuvla
 USER nuvla
