--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>sixsq.nuvla.ring</groupId>
   <artifactId>parent</artifactId>
-  <version>2.1.0</version>
+  <version>2.1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>ring</name>
   <url>http://sixsq.com/</url>
