- Dockerfile - Install curl - Container dependency - Exclude lein plugins test report from container dependency - Container dpendnecey - Fix prependGroupId

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -21,7 +21,8 @@ RUN chmod 0755 /opt/nuvla/server/bin/start.sh \
     && mkdir -p /opt/nuvla/server/lib.d/
 
 RUN apk upgrade --update-cache --available && \
-    apk add openssl && \
+    apk --no-cache add openssl &&  \
+    apk --no-cache add curl && \
     rm -rf /var/cache/apk/*
 
 ENV NUVLA_SERVER_INIT=sixsq.nuvla.server.example/init
