ci(maven): Retire maven ci(release-please): Release please control version based on commit messages ci(github): Github orchestrate build of ui docker image

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -25,7 +25,7 @@ RUN apk upgrade --update-cache --available && \
     apk --no-cache add curl && \
     rm -rf /var/cache/apk/*
 
-ENV NUVLA_SERVER_INIT=sixsq.nuvla.server.example/init
+ENV NUVLA_SERVER_INIT=com.sixsq.nuvla.server.example/init
 
 EXPOSE 8200
 
