ci(github): Import missing GPG key

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,11 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
+      - name: Import GPG key
+        run: echo $GPG_KEY | base64 --decode | gpg --batch --import
+        env:
+          GPG_KEY: ${{ secrets.GPG_SIXSQ_RELEASE_KEY }}
+
       - name: Deploy to clojars
         working-directory: code
         run: lein deploy clojars
