--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,8 +63,8 @@ jobs:
         working-directory: code
         run: lein deploy clojars
         env:
-          clojars_username: ${{ secrets.CLOJARS_USERNAME }}
-          clojars_password: ${{ secrets.CLOJARS_PASSWORD }}
+          CLOJARS_USERNAME: ${{ secrets.CLOJARS_USERNAME }}
+          CLOJARS_PASSWORD: ${{ secrets.CLOJARS_PASSWORD }}
 
       - name: Build with lein
         working-directory: code
