--- a/.github/actions/action-a/action.yml
+++ b/.github/actions/action-a/action.yml
@@ -18,5 +18,5 @@ runs:
     - name: Setup tmate session
       id: workspace_root
       shell: bash
-      run: echo "WORKSPACE_ROOT=${INPUT_TXT} to output" | tee -a $GITHUB_OUTPUT
+      run: echo "WORKSPACE_ROOT=${{ inputs.INPUT_TXT }} to output" | tee -a $GITHUB_OUTPUT
 
