--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,13 @@ jobs:
         with:
           DOCKER_REPO: nuvladev
           DOCKER_TAG: ${{ steps.extract_branch.outputs.branch }}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          SONARQUBE_TOKEN: ${{secrets.SONARQUBE_TOKEN}}
+          SONAR_HOST_URL: ${{secrets.SONAR_HOST_URL}}
+          CLOJARS_USERNAME: ${{secrets.CLOJARS_USERNAME}}
+          CLOJARS_PASSWORD: ${{secrets.CLOJARS_PASSWORD}}
+          SIXSQ_DOCKER_USERNAME: ${{secrets.SIXSQ_DOCKER_USERNAME}}
+          SIXSQ_DOCKER_PASSWORD: ${{secrets.SIXSQ_DOCKER_PASSWORD}}
 
   notify:
     if: always()
