--- a/.github/actions/common/action.yml
+++ b/.github/actions/common/action.yml
@@ -76,11 +76,11 @@ runs:
 
     - name: Run Sonar Scanner
       env:
-        # provide GITHUB_TOKEN to get access to secrets.SONARQUBE_TOKEN
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # provide GITHUB_TOKEN to get access to inputs.SONARQUBE_TOKEN
+        GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
       working-directory: code
       shell: bash
-      run: sonar-scanner -Dsonar.token=${{ secrets.SONARQUBE_TOKEN }} -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} -Dsonar.projectVersion=${{ steps.project_version.outputs.version }}
+      run: sonar-scanner -Dsonar.token=${{ inputs.SONARQUBE_TOKEN }} -Dsonar.host.url=${{ inputs.SONAR_HOST_URL }} -Dsonar.projectVersion=${{ steps.project_version.outputs.version }}
 
     - name: Get list of tests
       if: always()
@@ -118,8 +118,8 @@ runs:
       with:
         scanMetadataReportFile: code/.scannerwork/report-task.txt
       env:
-        SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        SONAR_TOKEN: ${{ inputs.SONARQUBE_TOKEN }}
+        SONAR_HOST_URL: ${{ inputs.SONAR_HOST_URL }}
 
     - name: Publish Unit Test Results
       uses: EnricoMi/publish-unit-test-result-action@v2
@@ -132,8 +132,8 @@ runs:
       run: lein deploy clojars
       shell: bash
       env:
-        CLOJARS_USERNAME: ${{ secrets.CLOJARS_USERNAME }}
-        CLOJARS_PASSWORD: ${{ secrets.CLOJARS_PASSWORD }}
+        CLOJARS_USERNAME: ${{ inputs.CLOJARS_USERNAME }}
+        CLOJARS_PASSWORD: ${{ inputs.CLOJARS_PASSWORD }}
 
     - name: Build with lein
       working-directory: code
@@ -157,8 +157,8 @@ runs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.SIXSQ_DOCKER_USERNAME }}
-        password: ${{ secrets.SIXSQ_DOCKER_PASSWORD }}
+        username: ${{ inputs.SIXSQ_DOCKER_USERNAME }}
+        password: ${{ inputs.SIXSQ_DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v6
